--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5f2c12cc",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
     "from torch_obb.estimation import obb_estimate_pca, obb_estimate_dito\n",
     "import trimesh\n",
     "\n",
-    "device = 'cuda'\n",
+    "device = 'cpu'\n",
     "\n",
     "rng = np.random.RandomState(42)\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "# points1 = rng.random((500, 3)).astype(np.float32) * np.array([1, 1, 1], dtype=np.float32)\n",
     "# points2 = rng.random((14, 3)).astype(np.float32) * np.array([1, 5, 2], dtype=np.float32)\n",
-    "points3 = sample_spherical(50, 3) * np.array([2, 5, 5] + np.array([1.0, 0.0, 0.0], dtype=np.float32), dtype=np.float32)\n",
+    "points3 = sample_spherical(50000, 3) * np.array([2, 5, 5] + np.array([1.0, 0.0, 0.0], dtype=np.float32), dtype=np.float32)\n",
     "rotation_matrix = trimesh.transformations.rotation_matrix(np.pi/3, [1, 0, 0])\n",
     "points3 = trimesh.transform_points(points3, rotation_matrix)\n",
     "points3 = points3.astype(np.float32)\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3afb6084",
    "metadata": {},
    "outputs": [
