--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,52 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "5f2c12cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from torch_obb.estimation import obb_estimate_pca, obb_estimate_dito\n",
+    "from torch_obb import obb_estimate_pca, obb_estimate_dito, obb_points_intersection, obb_vertices\n",
     "import trimesh\n",
     "\n",
     "device = 'cpu'\n",
     "\n",
-    "rng = np.random.RandomState(42)\n",
+    "rng = np.random.RandomState(132)\n",
     "\n",
     "def sample_spherical(npoints, ndim=3):\n",
     "    vec = np.random.randn(npoints, ndim).astype(np.float32)\n",
     "    vec /= np.linalg.norm(vec, axis=1)[:, None]\n",
     "    return vec\n",
     "\n",
-    "# points1 = rng.random((500, 3)).astype(np.float32) * np.array([1, 1, 1], dtype=np.float32)\n",
-    "# points2 = rng.random((14, 3)).astype(np.float32) * np.array([1, 5, 2], dtype=np.float32)\n",
-    "points3 = sample_spherical(50000, 3) * np.array([2, 5, 5] + np.array([1.0, 0.0, 0.0], dtype=np.float32), dtype=np.float32)\n",
+    "points1 = rng.random((18, 3)).astype(np.float32) * np.array([1, 1, 1], dtype=np.float32)\n",
+    "points2 = rng.random((121, 3)).astype(np.float32) * np.array([1, 5, 2], dtype=np.float32)\n",
+    "points3 = sample_spherical(15, 3) * np.array([2, 5, 5] + np.array([1.0, 0.0, 0.0], dtype=np.float32), dtype=np.float32)\n",
     "rotation_matrix = trimesh.transformations.rotation_matrix(np.pi/3, [1, 0, 0])\n",
-    "points3 = trimesh.transform_points(points3, rotation_matrix)\n",
-    "points3 = points3.astype(np.float32)\n",
-    "points = torch.nested.as_nested_tensor([torch.from_numpy(points3)], layout=torch.jagged)\n",
+    "points2 = trimesh.transform_points(points2, rotation_matrix).astype(np.float32)\n",
+    "points = torch.nested.as_nested_tensor([torch.from_numpy(points1), torch.from_numpy(points2), torch.from_numpy(points3)], layout=torch.jagged)\n",
     "points = points.to(device)\n",
-    "vertices_pca, basis_pca = obb_estimate_pca(points)\n",
-    "vertices_dito, basis_dito = obb_estimate_dito(points)"
+    "obb_pca = obb_estimate_pca(points)\n",
+    "obb_dito = obb_estimate_dito(points)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "id": "31218909",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 18, 121,  15])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obb_intersection = obb_points_intersection(obb_dito, points, pairwise=True, counts=True)\n",
+    "obb_intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1687cc3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 18,   6,  18],\n",
+       "        [  3, 121, 121],\n",
+       "        [  0,   0,  15]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obb_intersection = obb_points_intersection(obb_dito, points, pairwise=False, counts=True)\n",
+    "obb_intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3afb6084",
    "metadata": {},
    "outputs": [
@@ -57,6 +93,8 @@
      "text": [
       "canvas.is_closed() is deprecated, use canvas.get_closed() instead.\n",
       "Your scene does not contain any lights. Some objects may not be visible.\n",
+      "Unable to find extension: VK_EXT_physical_device_drm\n",
+      "Detected skylake derivative running on mesa i915. Clears to srgb textures will use manual shader clears.\n",
       "Unrecognized present mode 1000361000\n",
       "Unrecognized present mode 1000361000\n"
      ]
@@ -85,14 +123,14 @@
     "         [2, 7, 6],\n",
     "         [6, 5, 4],\n",
     "         [7, 5, 6]]\n",
-    "i = 0\n",
+    "i = 1\n",
     "canvas = GlfwRenderCanvas(size=(1024, 768), max_fps=60, update_mode=\"continuous\")   \n",
     "scene = gfx.Scene()\n",
     "background = gfx.Background(None, gfx.BackgroundMaterial('white'))\n",
     "scene.add(background)\n",
     "\n",
-    "vertices_pca_np = vertices_pca[i].cpu().numpy()\n",
-    "vertices_dito_np = vertices_dito[i].cpu().numpy()\n",
+    "vertices_pca_np = obb_vertices(obb_pca)[i].cpu().numpy()\n",
+    "vertices_dito_np = obb_vertices(obb_dito)[i].cpu().numpy()\n",
     "points_np = points[i].cpu().numpy()\n",
     "\n",
     "points_geometry = gfx.Geometry(positions=points_np.astype(np.float32))\n",
@@ -100,12 +138,12 @@
     "scene.add(pc)\n",
     "\n",
     "obb_geometry_pca = gfx.Geometry(positions=vertices_pca_np.squeeze().astype(np.float32), indices=np.array(_TRIS, dtype=np.int32))\n",
-    "obb_pca = gfx.Mesh(obb_geometry_pca, gfx.MeshBasicMaterial(wireframe=True, color='red', wireframe_thickness=2))\n",
-    "scene.add(obb_pca)\n",
+    "obb_pca_s = gfx.Mesh(obb_geometry_pca, gfx.MeshBasicMaterial(wireframe=True, color='red', wireframe_thickness=2))\n",
+    "scene.add(obb_pca_s)\n",
     "\n",
     "obb_geometry_dito = gfx.Geometry(positions=vertices_dito_np.squeeze().astype(np.float32), indices=np.array(_TRIS, dtype=np.int32))\n",
-    "obb_dito = gfx.Mesh(obb_geometry_dito, gfx.MeshBasicMaterial(wireframe=True, color='green', wireframe_thickness=2))\n",
-    "scene.add(obb_dito)\n",
+    "obb_dito_s = gfx.Mesh(obb_geometry_dito, gfx.MeshBasicMaterial(wireframe=True, color='green', wireframe_thickness=2))\n",
+    "scene.add(obb_dito_s)\n",
     "\n",
     "disp = gfx.Display(canvas=canvas)\n",
     "disp.show(scene)"
@@ -136,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
