added stream synchronization with pytorch to the warp kernels

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5f2c12cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -15,7 +24,7 @@
     "from torch_obb import obb_estimate_pca, obb_estimate_dito, obb_points_intersection, obb_vertices\n",
     "import trimesh\n",
     "\n",
-    "device = 'cpu'\n",
+    "device = 'cuda'\n",
     "\n",
     "rng = np.random.RandomState(132)\n",
     "\n",
@@ -25,7 +34,7 @@
     "    return vec\n",
     "\n",
     "points1 = rng.random((18, 3)).astype(np.float32) * np.array([1, 1, 1], dtype=np.float32)\n",
-    "points2 = rng.random((121, 3)).astype(np.float32) * np.array([1, 5, 2], dtype=np.float32)\n",
+    "points2 = rng.random((1222, 3)).astype(np.float32) * np.array([1, 5, 2], dtype=np.float32)\n",
     "points3 = sample_spherical(15, 3) * np.array([2, 5, 5] + np.array([1.0, 0.0, 0.0], dtype=np.float32), dtype=np.float32)\n",
     "rotation_matrix = trimesh.transformations.rotation_matrix(np.pi/3, [1, 0, 0])\n",
     "points2 = trimesh.transform_points(points2, rotation_matrix).astype(np.float32)\n",
@@ -37,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "31218909",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 18, 121,  15])"
+       "tensor([  18, 1222,   15], device='cuda:0')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,19 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1687cc3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 18,   6,  18],\n",
-       "        [  3, 121, 121],\n",
-       "        [  0,   0,  15]])"
+       "tensor([[  18,    9,   18],\n",
+       "        [  27, 1222,  600],\n",
+       "        [   0,    0,   15]], device='cuda:0')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3afb6084",
    "metadata": {},
    "outputs": [
@@ -93,8 +102,6 @@
      "text": [
       "canvas.is_closed() is deprecated, use canvas.get_closed() instead.\n",
       "Your scene does not contain any lights. Some objects may not be visible.\n",
-      "Unable to find extension: VK_EXT_physical_device_drm\n",
-      "Detected skylake derivative running on mesa i915. Clears to srgb textures will use manual shader clears.\n",
       "Unrecognized present mode 1000361000\n",
       "Unrecognized present mode 1000361000\n"
      ]
@@ -126,6 +133,20 @@
     "i = 1\n",
     "canvas = GlfwRenderCanvas(size=(1024, 768), max_fps=60, update_mode=\"continuous\")   \n",
     "scene = gfx.Scene()\n",
+    "grid = gfx.Grid(\n",
+    "    None,\n",
+    "    gfx.GridMaterial(\n",
+    "        major_step=1,\n",
+    "        minor_step=0.1,\n",
+    "        thickness_space=\"world\",\n",
+    "        major_thickness=0.01,\n",
+    "        minor_thickness=0.001,\n",
+    "        infinite=True,\n",
+    "    ),\n",
+    "    orientation=\"xz\",\n",
+    ")\n",
+    "grid.local.z = 0\n",
+    "scene.add(grid)\n",
     "background = gfx.Background(None, gfx.BackgroundMaterial('white'))\n",
     "scene.add(background)\n",
     "\n",
@@ -174,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
